automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico"
+    "mexico = countries[3]"
    ]
   },
   {
