automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors = "
+    "kindof_neighbors = countries[0:5]"
    ]
   },
   {
