automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    " # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
