--- a/index.ipynb
+++ b/index.ipynb
@@ -212,10 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries.append('Malta') # add code here"
@@ -236,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
