--- a/index.ipynb
+++ b/index.ipynb
@@ -415,10 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries) # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
@@ -441,7 +439,7 @@
    "outputs": [],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats # 3"
+    "num_of_repeats = len(cou# 3"
    ]
   },
   {
