automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -432,14 +432,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats = len(cou# 3"
+    "num_of_repeats = len(countries)-len(unique_countries)# 3"
    ]
   },
   {
